force-app/main/default/objects/Customer__c/fields/Alt_Number__c.field-meta.xml
<CustomField>
    <fullName>Alt_Number__c</fullName>
    <label>Alt. Number</label>
    <type>Phone</type>
</CustomField>