force-app/main/default/objects/Customer__c/fields/Online_Payments__c.field-meta.xml
<CustomField>
    <fullName>Online_Payments__c</fullName>
    <label>Online Payments</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Mode__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>