force-app/main/default/objects/Customer__c/fields/Own_House__c.field-meta.xml
<CustomField>
    <fullName>Own_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own House</label>
    <type>Checkbox</type>
</CustomField>