force-app/main/default/objects/Customer__c/fields/Places__c.field-meta.xml
<CustomField>
    <fullName>Places__c</fullName>
    <label>Places</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sri Nagar</fullName>
            </value>
            <value>
                <fullName>Friends Colony</fullName>
            </value>
            <value>
                <fullName>Gittikhadan</fullName>
            </value>
            <value>
                <fullName>Gorewada</fullName>
            </value>
            <value>
                <fullName>Shivaji Nagar</fullName>
            </value>
            <value>
                <fullName>SR Nagar</fullName>
            </value>
            <value>
                <fullName>Hinjwadi</fullName>
            </value>
            <value>
                <fullName>Chrompet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>